Fixing navigation icons on smaller screens

--- a/src/main/resources/static/src/js/components/codeball/PitchesListItem/PitchesListItem.scss
+++ b/src/main/resources/static/src/js/components/codeball/PitchesListItem/PitchesListItem.scss
@@ -3,14 +3,23 @@
 
 .pitches-list-item {
   @include flex-parent;
+  justify-content: flex-start;
 
   .name {
     @include flex-child;
     margin-right: $spacing-l;
+
+    @include small-phone {
+      text-align: left;
+    }
   }
 
   .address {
     @include flex-child-grow;
     text-align: right;
+
+    @include small-phone {
+      display: none;
+    }
   }
 }
