--- a/src/main/resources/static/src/js/components/ui/Navigation/Navigation.scss
+++ b/src/main/resources/static/src/js/components/ui/Navigation/Navigation.scss
@@ -53,7 +53,7 @@ nav.navigation {
           @include tablet-and-smaller {
             position: relative;
             top: -$spacing-s;
-            width: 100%;
+            width: 18px;
             margin-right: 0;
           }
         }
